src/style.css
html {
	background: #fff;
	color: #000;
	font-family: 'Courier New', Courier, monospace;
}

* {
	box-sizing: border-box;
}

body {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
	padding: 1rem;
	gap: 1rem;
}

h1 {
	text-align: initial;
	font-size: 200%;
	font-weight: bold;
}

main {
	display: grid;
	grid-template-columns: 0fr 1fr;
	grid-gap: 0.25rem 1rem;
	width: 100%;
	min-height: 100%;
}

hr {
	grid-column: span 2;
	width: 100%;
	margin: 0;
	border: 0;
	border-top: solid 1px #BBB;
}

h1 {
	grid-column-start: 2;
}

label {
	text-align: right;
	align-self: center;
}

ul li:not(:last-of-type)::after {
	content: 'or';
}


input[type="file"] {
	width: 100%;
}

input[type="range"] {
	position: relative;
	margin-right: 4rem;
}

input[type="range"]::after {
	content: attr(data-value);
	position: absolute;
	left: 100%;
	margin-left: 0.5rem;
}

button:disabled,
input:disabled {
	opacity: 0.5;
	cursor: not-allowed;
}

img,
canvas,
video {
	border: solid 1px black;
	max-width: 100%;
	max-height: 100%;
}

img[src=""] {
	display: none;
}

.modal {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background: rgba(0, 0, 0, 0.8);
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 1rem;
}

.modal h2 {
	color: #fff;
}

.modal video {
	background: #000;
	width: 100%;
	height: 100%;
}

.modal nav {
	width: 100%;
	flex: none;
	display: flex;
}

button {
	width: 100%;
}

input,
button {
	font-family: inherit;
	cursor: pointer;
	padding: 0.25rem;
}

#fill {
	width: auto;
	padding: 0;
}

.invert canvas {
	background: #000;
}

